--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ python:
   - 2.7
 install:
   - pip install -r requirements.txt
+  - pip install coveralls
 script:
   - ./test_myownmocker.py
+after_success: coveralls
