--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ install:
   - pip install -r requirements.txt
   - pip install coveralls
 script:
-  - ./test_myownmocker.py
+  - coverage run test_myownmocker.py
+  - coverage report -m
 after_success: coveralls
